# old-shap

./: .pre-commit-config.yaml  README.md  data.sh  main.ipynb  pyproject.toml
old_shap/: __init__.py
